# examen-dvc

./: dvc.yaml  pyproject.toml
.dvc/: config
metrics/: scores.json
src/data/: normalize_data.py  split_data.py
src/models/: evaluate_model.py  grid_search.py  train_model.py
