[project]
name = "examen-dvc"
version = "0.1.0"
description = ""
authors = [
    {name = "Chinnawat Wisetwongsa",email = "binn1908@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[s3] (>=3.67.1,<4.0.0)",
    "pandas (>=3.0.2,<4.0.0) ; python_version >= \"3.11\"",
    "scikit-learn (>=1.8.0,<2.0.0) ; python_version >= \"3.11\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
